# scrape-graph-ai-pilot

./: pyproject.toml  smartScrapeGraph.py  test.py
expermients/: graphBulder.ipynb  useFulIdeas.py
